crates/zuban_python/tests/mypylike/tests/auto_import.test
[case auto_import_our_own_mods]

#? code-actions
completepls

#? --codepoint-column 0 code-actions
x.completepls

[file x.py]
completepls = 1

[out]
__main__:3: error: Name "completepls" is not defined
__main__:6: error: Name "x" is not defined
__main__.py:3: Code Actions:
- Import `x.completepls`: 3:0-3:0 replaced with: "from x import completepls\n"
__main__.py:6: Code Actions:
- Import `x`: 3:0-3:0 replaced with: "import x\n"

[case auto_import_with_selection_should_have_single_import_for_repeats]
# flags: --no-typecheck

#? code-actions --until-line 6
completepls
completepls

[file x.py]
completepls = 1

[out]
__main__.py:4: Code Actions:
- Import `x.completepls`: 4:0-4:0 replaced with: "from x import completepls\n"

[case auto_import_with_range]
# flags: --no-typecheck

bar
#? code-actions --until-line 6
completepls
x
baz

[file x.py]
completepls = 1
bar = 1
baz = 1

[out]
__main__.py:5: Code Actions:
- Import `x.completepls`: 2:0-2:0 replaced with: "from x import completepls\n"
- Import `x`: 2:0-2:0 replaced with: "import x\n"

[case auto_import_add_name_to_from1]
# flags: --no-typecheck
from x import a
#? code-actions
b

def f() -> None:
    #? code-actions
    b

[file x.py]
a = 1
b = 1

[file y.py]
a = 1
b = 1

[out]
__main__.py:4: Code Actions:
- Import `y.b`: 3:0-3:0 replaced with: "from y import b\n"
- Import `x.b`: 2:15-2:15 replaced with: ", b"
__main__.py:8: Code Actions:
- Import `x.b`: 2:15-2:15 replaced with: ", b"
- Import `y.b`: 3:0-3:0 replaced with: "from y import b\n"

[case auto_import_add_name_to_from2]
# flags: --no-typecheck
#? code-actions
b

def f() -> None:
    #? code-actions
    b

from x import a

[file x.py]
a = 1
b = 1

[file y.py]
a = 1
b = 1

[out]
__main__.py:3: Code Actions:
- Import `y.b`: 3:0-3:0 replaced with: "from y import b\n"
- Import `x.b`: 3:0-3:0 replaced with: "from x import b\n"
__main__.py:7: Code Actions:
- Import `x.b`: 9:15-9:15 replaced with: ", b"
- Import `y.b`: 3:0-3:0 replaced with: "from y import b\n"

[case auto_import_with_parens]
# flags: --no-typecheck
from x import (a, b)
#? code-actions
completeme

[file test2.py]
from x import (a, b,)
#? code-actions
completeme

[file test3.py]
from x import (a, b, )
#? code-actions
completeme

[file x.py]
a = 1
b = 1
completeme = 1

[out]
__main__.py:4: Code Actions:
- Import `x.completeme`: 2:19-2:19 replaced with: ", completeme"
test2.py:3: Code Actions:
- Import `x.completeme`: 1:20-1:20 replaced with: " completeme"
test3.py:3: Code Actions:
- Import `x.completeme`: 1:21-1:21 replaced with: "completeme"

[case auto_import_with_parens_multiline]
# flags: --no-typecheck
[file test1.py]
from x import (
    a, b
    )
#? code-actions
completeme

[file test2.py]
from x import (
    a,
    b
)
#? code-actions
completeme

[file test3.py]
from x import (
    a,
    b,
)
#? code-actions
completeme

[file x.py]
a = 1
b = 1
completeme = 1

[out]
test1.py:5: Code Actions:
- Import `x.completeme`: 2:8-2:8 replaced with: ", completeme"
test2.py:6: Code Actions:
- Import `x.completeme`: 3:5-3:5 replaced with: ", completeme"
test3.py:6: Code Actions:
- Import `x.completeme`: 3:6-3:6 replaced with: " completeme"

[case auto_import_of_module_in_namespaces]
# flags: --no-typecheck

#? code-actions
completepls

[file bar/baz/completepls.py]
[out]
__main__.py:4: Code Actions:
- Import `bar.baz.completepls`: 4:0-4:0 replaced with: "from bar.baz import completepls\n"

[case auto_import_of_nested_module]
# flags: --no-typecheck

#? code-actions
completepls

[file bar/__init__.py]
[file bar/completepls.py]
[out]
__main__.py:4: Code Actions:
- Import `bar.completepls`: 4:0-4:0 replaced with: "from bar import completepls\n"

[case auto_import_positions_with_docstrings]
# flags: --no-typecheck
[file test1.py]
"hello"

#? code-actions
completepls

[file test2.py]
"""
hello
"""

#? code-actions
completepls

[file test3.py]
"""
hello
"""

import bar
#? code-actions
completepls

[file x.py]
completepls = 1

[out]
test1.py:4: Code Actions:
- Import `x.completepls`: 2:0-2:0 replaced with: "from x import completepls\n"
test2.py:6: Code Actions:
- Import `x.completepls`: 4:0-4:0 replaced with: "from x import completepls\n"
test3.py:7: Code Actions:
- Import `x.completepls`: 6:0-6:0 replaced with: "from x import completepls\n"

[case auto_import_before_if]
# flags: --no-typecheck
"""
hello
"""
from typing import TYPE_CHECKING
# a
if TYPE_CHECKING
    import typing
# b

#? code-actions
completepls
[file x.py]
completepls = 1

[out]
__main__.py:12: Code Actions:
- Import `x.completepls`: 6:0-6:0 replaced with: "\nfrom x import completepls\n"

[case auto_import_groups_project_group]
# flags: --no-typecheck

from typing import TYPE_CHECKING

#? code-actions
completepls
[file x.py]
completepls = 1

[out]
__main__.py:6: Code Actions:
- Import `x.completepls`: 4:0-4:0 replaced with: "\nfrom x import completepls\n"

[case auto_import_groups_stdlib_group1]
# flags: --no-typecheck

from pathlib import Path

#? code-actions
ParamSpec

[out]
__main__.py:6: Code Actions:
- Import `typing.ParamSpec`: 4:0-4:0 replaced with: "from typing import ParamSpec\n"
- Import `ast.ParamSpec`: 4:0-4:0 replaced with: "from ast import ParamSpec\n"

[case auto_import_groups_stdlib_group2]
# flags: --no-typecheck

from pathlib import Path

import x

#? code-actions
TypeVar

[file x.py]

[out]
__main__.py:8: Code Actions:
- Import `typing.TypeVar`: 4:0-4:0 replaced with: "from typing import TypeVar\n"
- Import `ast.TypeVar`: 4:0-4:0 replaced with: "from ast import TypeVar\n"

[case auto_import_groups_third_party_group1]
# pkgs: with_star_imports
# flags: --no-typecheck

from pathlib import Path

import x

#? code-actions
no_star_import

[file x.py]

[out]
__main__.py:9: Code Actions:
- Import `with_star_imports.no_star_import`: 5:0-5:0 replaced with: "from with_star_imports import no_star_import\n"

[case auto_import_groups_third_party_group2]
# pkgs: with_star_imports
# flags: --no-typecheck

from pathlib import Path
import x

#? code-actions
no_star_import
#? code-actions
from_star_import_not_public

[file x.py]

[out]
__main__.py:8: Code Actions:
- Import `with_star_imports.no_star_import`: 5:0-5:0 replaced with: "from with_star_imports import no_star_import\n"
__main__.py:10: Code Actions: []

[case auto_import_do_not_add_imports]
# flags: --no-typecheck

#? code-actions
completepls

[file x.py]
from y import completepls

[file y.py]
completepls = 1

[out]
__main__.py:4: Code Actions:
- Import `y.completepls`: 4:0-4:0 replaced with: "from y import completepls\n"

[case auto_import_with_reexport]
# flags: --no-typecheck

#? code-actions
completepls

[file x.py]
from y import completepls as completepls

[file y.py]
completepls = 1

[out]
__main__.py:4: Code Actions:
- Import `y.completepls`: 4:0-4:0 replaced with: "from y import completepls\n"
- Import `x.completepls`: 4:0-4:0 replaced with: "from x import completepls\n"

[case auto_import_with_dunder_init_reexport]
# flags: --no-typecheck

#? code-actions
complete_pls

[file x/__init__.py]
from x.y import complete_pls

[file x/y.py]
complete_pls = 1

[out]
__main__.py:4: Code Actions:
- Import `x.complete_pls`: 4:0-4:0 replaced with: "from x import complete_pls\n"

[case auto_import_with_dunder_init_relative]
# flags: --no-typecheck

#? code-actions
complete_pls

[file x/__init__.py]
from .y import complete_pls

[file x/y.py]
complete_pls = 1

[out]
__main__.py:4: Code Actions:
- Import `x.complete_pls`: 4:0-4:0 replaced with: "from x import complete_pls\n"

[case auto_import_with_dunder_init_relative_nested]
# flags: --no-typecheck

#? code-actions
complete_pls

[file x/__init__.py]
from .y import complete_pls

[file x/y/__init__.py]
from .z import complete_pls

[file x/y/z.py]
complete_pls = 1

[out]
__main__.py:4: Code Actions:
- Import `x.complete_pls`: 4:0-4:0 replaced with: "from x import complete_pls\n"

[case auto_import_with_dunder_init_relative_should_not_use]
# flags: --no-typecheck

#? code-actions
complete_pls

[file x/__init__.py]
from ..y import complete_pls

[file y.py]
complete_pls = 1

[out]
__main__.py:4: Code Actions:
- Import `y.complete_pls`: 4:0-4:0 replaced with: "from y import complete_pls\n"
